--- a/css/main.css
+++ b/css/main.css
@@ -4,3 +4,33 @@ b {
 i {
     color: red;
 }
+timer,
+clock {
+    display: block;
+    font-family: monospace;
+    width: 500px;
+    margin: 10px 0;
+    background-color: rgba(200, 150, 10, 0.05);
+    border-radius: 3px;
+    padding: 5px;
+}
+clock {
+    background-color: rgba(5, 150, 5, 0.1);
+}
+div#cpan timer {
+    background-color: rgba(5, 150, 150, 0.1);
+}
+span.indent {
+    display: inline-block;
+    width: 150px;
+    text-align: right;
+}
+span.label {
+    font-weight: bold;
+    color: green;
+    font-family: monospace;
+}
+span.countdown {
+    color: red;
+    font-style: italic;
+}
